src/test/deca/codegen/extension/invalid/black-box/TAB_size_max.deca
{
    int[] a = new int[10000];
}